--- a/src/components/filterMain/filter.css
+++ b/src/components/filterMain/filter.css
@@ -58,3 +58,22 @@
     margin-bottom: 20px;
     padding: 10px 20px;
 }
+.cat-blog{
+    width: 31%;
+    min-width: 200px;
+    box-shadow: var(--shadow);
+    border-radius: 10px;
+    margin-bottom: 20px;
+    height: 300px;
+}
+.cat-blog .cat-img{
+    width: 100%;
+    height: 60%;
+    box-shadow: none;
+}
+.cat-blog .cat-details{
+    width: 100%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+}
